--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>{{ title }}</h1>
+<hr />
+<h3>Contador: {{ counter }}</h3>
+<button type="button" (click)="increaseDecrease(1)">Incrementa +1</button>
+<button type="button" (click)="increaseDecrease(-1)">Decrementa -1</button>
+<button type="button" (click)="resetCounter()">Resetea</button>
 <router-outlet />
