Crea Contador Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,7 @@
 <button type="button" (click)="increaseDecrease(1)">Incrementa +1</button>
 <button type="button" (click)="increaseDecrease(-1)">Decrementa -1</button>
 <button type="button" (click)="resetCounter()">Resetea</button>
-<router-outlet />
+
+<hr />
+
+<app-counter />
