Agrega funcionalidad al componente del contador

--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,1 +1,4 @@
-<p>counter works!</p>
+<h3>Contador: {{ counter }}</h3>
+<button type="button" (click)="increaseDecrease(1)">Incrementa +1</button>
+<button type="button" (click)="increaseDecrease(-1)">Decrementa -1</button>
+<button type="button" (click)="resetCounter()">Resetea</button>
